# triage_agent_sample

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  test_api.sh  test_sample.sh
.ruff.toml/: .gitignore                  (modify or create: include .venv, __pycache__, .ruff_cache)
app/agents/: agent_with_plugins.py  triage_agent.py
app/models/: models.py
app/triage_service/: triage_agent.py
app/utils/: azure_config.py  get_settings.py
pyproject.toml              (modify: add ruff, pytest, uvicorn deps/: config)
tests/intergration/: test_app.py
